Having pre-generated certificates saves very little time and breaks CI regularly

--- a/src/tests/modules/cipher/module.conf
+++ b/src/tests/modules/cipher/module.conf
@@ -1,8 +1,8 @@
 cipher cipher_rsa {
 	rsa {
 		private_key_password = whatever
-		private_key_file = src/tests/certs/rsa/server.key
-		certificate_file = src/tests/certs/rsa/server.pem
+		private_key_file = raddb/certs/rsa/server.key
+		certificate_file = raddb/certs/rsa/server.pem
 
 		oaep {
 			oaep_digest = "sha256"
