--- a/src/tests/modules/ldap/module.conf
+++ b/src/tests/modules/ldap/module.conf
@@ -585,7 +585,7 @@ ldap ldapssl {
 
 	tls {
 		require_cert	= 'allow'
-		ca_file	= 'src/tests/certs/rsa/ca.pem'
+		ca_file	= 'raddb/certs/rsa/ca.pem'
 	}
 
 	pool {
@@ -704,7 +704,7 @@ ldap ldaptls {
 	tls {
 		start_tls	= yes
 		require_cert	= 'allow'
-		ca_file	= 'src/tests/certs/rsa/ca.pem'
+		ca_file	= 'raddb/certs/rsa/ca.pem'
 	}
 
 	pool {
