--- a/src/lib/curl/configure.ac
+++ b/src/lib/curl/configure.ac
@@ -1,10 +1,12 @@
-AC_PREREQ([2.53])
-AC_INIT(base.c)
+AC_PREREQ([2.71])
+AC_INIT
+AC_CONFIG_SRCDIR([base.c])
 AC_REVISION($Revision$)
 AC_DEFUN(modname,[libfreeradius-curl])
 AC_DEFUN(modname_useropt,[m4_bpatsubst([]modname,[[-+.]],[_])])
 
-AC_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS([config.h])
+m4_include([m4/ax_smart_try.m4])
 m4_include([m4/libcurl_check_config.m4])
 
 AC_ARG_WITH([]modname,
@@ -73,5 +75,6 @@ AC_SUBST(mod_ldflags)
 AC_SUBST(version)
 
 AC_SUBST(targetname)
-AC_OUTPUT(all.mk)
+AC_CONFIG_FILES([all.mk])
+AC_OUTPUT
 
