Try again to fix spec include paths

--- a/.github/workflows/ci-rpm.yml
+++ b/.github/workflows/ci-rpm.yml
@@ -136,17 +136,13 @@ jobs:
       run: |
         yum install -y procps-ng
 
-    - name: Install build dependencies
-      run: |
-        yum-builddep -y freeradius/redhat/freeradius.spec
-
     #
     #  It has been observed that sometimes not all the dependencies are
     #  installed on the first go.  Give it a second chance.
     #
-    - name: Second run of install build dependencies
+    - name: Install build dependencies
       run: |
-        yum-builddep -y redhat/freeradius.spec
+        yum-builddep -y redhat/freeradius.spec && yum-builddep -y redhat/freeradius.spec
       working-directory: freeradius
 
     - name: Build RPMs
