Add basic tests for dollar expansions in conditions

--- a/src/tests/modules/test/policy.conf
+++ b/src/tests/modules/test/policy.conf
@@ -35,3 +35,20 @@ section_names {
 		test_fail
 	}
 }
+
+dollar_expansions {
+	# Should be compiled out
+	if ('${a_term}' != '${a_term}') {
+		test_fail
+	}
+
+	# Check it's not just expanded to a zero length string
+	if ('${a_term}' == '${b_term}') {
+		test_fail
+	}
+
+	# Check against dynamic attributes
+	if ('${c_term}' != &User-Name) {
+		test_fail
+	}
+}
