Check dollar expansions work for non-strings

--- a/src/tests/modules/test/policy.conf
+++ b/src/tests/modules/test/policy.conf
@@ -37,8 +37,23 @@ section_names {
 }
 
 dollar_expansions {
+	update {
+		&Tmp-Bool-0 := yes
+	}
 	# Should be compiled out
 	if ('${a_term}' != '${a_term}') {
+		test_fail
+	}
+
+	if ("${a_term}" != "${a_term}") {
+		test_fail
+	}
+
+	if (&Tmp-Bool-0 != ${d_term}) {
+		test_fail
+	}
+
+	if ('${a_term}' !~ /${a_term}/) {
 		test_fail
 	}
 
