Yet more broken expansions

--- a/src/tests/modules/test/policy.conf
+++ b/src/tests/modules/test/policy.conf
@@ -53,6 +53,10 @@ dollar_expansions {
 		test_fail
 	}
 
+	if (<bool>"${d_term}" != yes) {
+		test_fail
+	}
+
 	if ('${a_term}' !~ /${a_term}/) {
 		test_fail
 	}
