there's no Tmp-Bool-0

--- a/src/tests/modules/test/policy.conf
+++ b/src/tests/modules/test/policy.conf
@@ -38,7 +38,7 @@ section_names {
 
 dollar_expansions {
 	update {
-		&Tmp-Bool-0 := yes
+		&Fall-Through := yes
 	}
 	# Should be compiled out
 	if ('${a_term}' != '${a_term}') {
@@ -49,7 +49,7 @@ dollar_expansions {
 		test_fail
 	}
 
-	if (&Tmp-Bool-0 != ${d_term}) {
+	if (&Fall-Through != ${d_term}) {
 		test_fail
 	}
 
