rlm_files: allow to specify proto (default "radius")

--- a/src/tests/modules/files/module.conf
+++ b/src/tests/modules/files/module.conf
@@ -8,6 +8,12 @@ files {
 	filename = $ENV{MODULE_TEST_DIR}/authorize
 }
 
+files dhcpv4 {
+	key = &IP-Pool.Name
+	proto = dhcpv4
+	filename = $ENV{MODULE_TEST_DIR}/dhcpv4
+}
+
 files subnet {
 	key = &FreeRADIUS-Client-IP-Prefix
 	filename = $ENV{MODULE_TEST_DIR}/prefix
