--- a/src/tests/modules/unit_test_module.conf
+++ b/src/tests/modules/unit_test_module.conf
@@ -32,27 +32,7 @@ $-INCLUDE $ENV{MODULE_TEST_DIR}/triggers.conf
 
 $-INCLUDE $ENV{MODULE_TEST_DIR}/clients.conf
 
-server default {
-	namespace = radius
-
-	listen {
-		type = Access-Request
-	}
-
-	recv Access-Request {
-		#
-		# Include the test file specified by the
-		# KEYWORD environment variable.
-		#
-		$INCLUDE $ENV{MODULE_TEST_UNLANG}
-
-		pap
-	}
-
-	authenticate pap {
-		pap
-	}
-}
+$INCLUDE ./$ENV{PROTOCOL}.conf
 
 policy {
 	test_pass {
