remove "update" from conf files

--- a/src/tests/keywords/policy.conf
+++ b/src/tests/keywords/policy.conf
@@ -54,24 +54,18 @@ with.dots {
 #
 success {
 	if (!&reply.Result-Status) {
-		update reply {
-			&Result-Status := "success"
-		}
+		&reply.Result-Status := "success"
 	}
 
 	if (&parent.request && !&parent.reply.Result-Status) {
-		update parent.reply {
-			&Result-Status := "success"
-		}
+		&parent.reply.Result-Status := "success"
 	}
 
 	ok
 }
 
 test_fail {
-	update reply {
-		&Result-Status += "Failure in test at line %(interpreter:...line)"
-	}
+	&reply.Result-Status += "Failure in test at line %(interpreter:...line)"
 
 	if (&parent.request) {
 		update parent.reply {
