--- a/src/tests/keywords/radius.conf
+++ b/src/tests/keywords/radius.conf
@@ -103,9 +103,7 @@ $INCLUDE policy.conf
 	}
 
 	accept {
-		update control {
-			&Auth-Type := Accept
-		}
+		&control.Auth-Type := Accept
 	}
 
 }
@@ -152,9 +150,7 @@ server second {
 	}
 
 	recv Access-Request {
-		update reply {
-			&Reply-Message := "call second"
-		}
+		&reply.Reply-Message := "call second"
 
 		accept
 	}
